welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:2: error: ')' expected but integer literal found.
	if((you > 8 && date !(<= 2)) || (date > 8 && you !(<= 2))) {
                                 ^dateFashion:11: error: ')' expected but '}' found.
}
^